# libtorch_nlp_demo

./: .gitignore  CMakeLists.txt  README.md
src/: libtorch_nlp_demo.ipynb  nlp_predicator.cpp  nlp_trainer.py
src/data/: readme.md
